--- a/compose.yml
+++ b/compose.yml
@@ -3,6 +3,12 @@ services:
     image: nginx
     ports:
       - "80:80"
+    environment:
+      - name=value
+      - DT_RELEASE_VERSION=$VERSION
+      - DT_RELEASE_STAGE=$STAGE
+      - DT_RELEASE_PRODUCT=$PRODUCT
+      - DT_RELEASE_BUILD_VERSION=$BUILD_VERSION
     volumes:
       - ./nginx:/etc/nginx/conf.d:ro
-      - ./html:/var/www/html
+      - ./html:/var/www/html:ro
