--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-REDIS_HOST=localhost
-REDIS_PORT=6379
-FORMATION_JSON_URL=https://raw.githubusercontent.com/RousselTM/grafana-formation/main/tp/data/projet3.json
+VERSION=1.0
+STAGE=demo
+PRODUCT=app-elearning
+BUILD_VERSION=1.0.2025-06-01-1524
