--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,9 +1,57 @@
 server {
-    listen 80;
-    index index.html index.php;
-    root /var/www/html;
+	
+	listen						80;
+	
+	server_name					demo-app-elearning.rousseltm.fr;
+	
+	root						/usr/share/nginx/html;
+    index						index.php index.html;
+	
+    # redirect server error pages
+    #
 
-    location / {
-        try_files $uri $uri/ =404;
+    error_page   404  /return_code?code=404;
+    error_page   413  /return_code?code=413;
+
+    error_page   500 502 503 504  /return_code?code=500;
+    
+	
+	# See if a file or directory was requested first.  If not, try the request as a php file.
+	location / {
+		try_files $uri $uri/ $uri.php?$args;
+
+	}
+	
+	
+	# pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
+    #
+    location ~ \.php$ {
+        # 404
+        try_files $fastcgi_script_name =404;
+
+        fastcgi_split_path_info ^(.+?\.php)(/.*)$;
+
+        fastcgi_pass php-demo-app-elearning:9000;
+        fastcgi_index index.php;
+
+        # include the fastcgi_param setting
+        include fastcgi_params;
+
+        fastcgi_param DOCUMENT_ROOT     $realpath_root;
+        fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
+        if (!-f $realpath_root$fastcgi_script_name) {
+            return 404;
+        }
+        
+        # Mitigate https://httpoxy.org/ vulnerabilities
+        fastcgi_param HTTP_PROXY "";
     }
+	
+	# deny access to .htaccess files, if Apache's document root
+    # concurs with nginx's one
+    #
+    location ~ /\.ht {
+        deny  all;
+    }
+
 }
